Refactoring getDimension and changed ordinal fetch for keyword
Signed-off-by: expani <anijainc@amazon.com>